--- a/tests/cert-tests/template-nc.tmpl
+++ b/tests/cert-tests/template-nc.tmpl
@@ -17,7 +17,7 @@ dns_name = "www.none.org"
 dns_name = "www.morethanone.org"
 
 # An IP address in case of a server.
-ip_address = "192.168.1.1"
+#ip_address = "192.168.1.1"
 
 dns_name = "www.evenmorethanone.org"
 
@@ -48,14 +48,13 @@ signing_key
 # keys for encryption and signing.
 #encryption_key
 
-nc_permit[dns] = example.com
-nc_permit[dns] = .example.com
-nc_exclude[dns] = net
-nc_exclude[dns] = org
+nc_permit_dns = example.com
+nc_exclude_dns = net
+nc_exclude_dns = org
 
-nc_permit[email] = nmav@example.com
-nc_exclude[email] = example.net
-nc_exclude[email] = example.li
+nc_permit_email = nmav@example.com
+nc_exclude_email = example.net
+nc_exclude_email = example.li
 
 # Whether this key will be used to sign other certificates.
 cert_signing_key
